[tool.poetry]
name = "pixbyt-server"
version = "0.0.1"
description = "TODO: TODO"
authors = ["Douwe Maan"]

packages = [{ include = "pixbyt_server" }]

[tool.poetry.dependencies]
python = "<3.12,>=3.7.1"
aiohttp = "^3.0"
aiohttp_basicauth = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pixbyt-server = 'pixbyt_server.server:main'
